Bug 651036 - SMIL: Make discrete to-animations behave consistently with discrete from-to animations r=dholbert